central america and caribbean VPs

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -693,7 +693,7 @@
  STATE_692: "Windward Islands"
  STATE_693: "Southern Bahamas"
  STATE_694: "Crosswind Islands"
- STATE_695: "Curacao"
+ STATE_695: "Leeward Antilles"
  STATE_696: "Bermuda"
  STATE_697: "Madeira"
  STATE_698: "Azores"
@@ -905,7 +905,7 @@
  STATE_904: "Nephia"
  STATE_905: "Ongtupqa"
  STATE_906: "Ti'tsa-pa"
- STATE_907: "El Paso"
+ STATE_907: "Ysleta"
  STATE_908: "East Iturbides"
  STATE_909: "West-Rhineland"
  STATE_910: "Zeeuws-Vlaanderen"
@@ -944,8 +944,8 @@
  STATE_943: "Rainy River"
  STATE_944: "Norton"
  STATE_945: "Black Rock"
- STATE_946: "Laredo"
- STATE_947: "Rio Grande"
+ STATE_946: "Monclova"
+ STATE_947: "Río Grande"
  STATE_948: "Stephens"
  STATE_949: "Suvalki"
  STATE_950: "Cavelier"
@@ -1210,10 +1210,10 @@
  STATE_1209: "Northern Epirus"
  STATE_1210: "Ionian Islands"
  STATE_1211: "Tabasco"
- STATE_1212: "Peten"
+ STATE_1212: "Petén"
  STATE_1213: "Teguzgalpa"
  STATE_1214: "Tologalpa"
- STATE_1215: "Panama"
+ STATE_1215: "Panamá"
  STATE_1216: "Dutch Sunda Islands"
  STATE_1217: "Interior Essequibo"
  STATE_1218: "Coast Essequibo"
