--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -715,6 +715,7 @@
  VICTORY_POINTS_4948: "Dakar"
 #273 - FEZZAN
 #274 - NICARAGUAN CANAL
+ VICTORY_POINTS_13303: "Port Nicaragua"
 #275 - TRANSVAAL
  VICTORY_POINTS_10400: "Pretoria"
 #276 - HURON
@@ -722,8 +723,8 @@
  VICTORY_POINTS_749: "Niagara"
  VICTORY_POINTS_9667: "Petite Côte"
 #277 - MEXICO CITY
- VICTORY_POINTS_2008: "León de los Aldama"
- VICTORY_POINTS_1965: "Mexico City"
+ VICTORY_POINTS_1965: "Ciudad de México"
+ VICTORY_POINTS_14664: "Toluca"
 #278 - PAMPAS
  VICTORY_POINTS_12351: "Luján"
  VICTORY_POINTS_12394: "Olavarria"
@@ -821,6 +822,7 @@
  VICTORY_POINTS_14645: "Caracas"
  VICTORY_POINTS_10855: "Valencia del Rey"
 #308 - LEEWARD ISLANDS
+ VICTORY_POINTS_9377: "Port Peter"
 #309 - SURINAME
  VICTORY_POINTS_14612: "Fordlandia"
  VICTORY_POINTS_13554: "Paramaribo"
@@ -828,22 +830,37 @@
 #310 - CAYENNE
  VICTORY_POINTS_12885: "Borgesiusstad"
 #311 - BRITISH HONDURAS
-#312 - HONDURAS
- VICTORY_POINTS_12865: "Tegucigalpa"
+ VICTORY_POINTS_14465: "Belize City"
+#312 - COMAYAGUA
+ VICTORY_POINTS_14433: "Comayagua"
+ VICTORY_POINTS_8017: "Puerto de Caballos"
 #313 - GUATEMALA
- VICTORY_POINTS_10886: "Guatemala"
+ VICTORY_POINTS_14431: "Ciudad de Guatemala"
+ VICTORY_POINTS_14425: "Escuintla"
 #314 - EL SALVADOR
- VICTORY_POINTS_12823: "San Salvador"
+ VICTORY_POINTS_13093: "San Miguel"
+ VICTORY_POINTS_14418: "San Salvador"
 #315 - CUBA
- VICTORY_POINTS_7590: "Guantánamo"
+ VICTORY_POINTS_15690: "Cienfuegos"
  VICTORY_POINTS_7622: "Havana"
+ VICTORY_POINTS_10498: "Matanzas"
+ VICTORY_POINTS_15688: "Port Libertad"
+ VICTORY_POINTS_15684: "Santiago de Cuba"
 #316 - COSTA RICA
- VICTORY_POINTS_13087: "San Jose"
+ VICTORY_POINTS_13087: "Alajuela"
+ VICTORY_POINTS_14398: "Cartago"
+ VICTORY_POINTS_14397: "Puerto Limón"
 #317 - NICARAGUA
- VICTORY_POINTS_12738: "Managua"
+ VICTORY_POINTS_12738: "León"
+ VICTORY_POINTS_14407: "Managua"
+ VICTORY_POINTS_14410: "Matagalpa"
 #318 - HAITI
+ VICTORY_POINTS_15737: "Aux Cayes"
+ VICTORY_POINTS_1594: "Cap-Haïtien"
  VICTORY_POINTS_4641: "Port-au-Prince"
 #319 - DOMINICA
+ VICTORY_POINTS_15744: "La Vega"
+ VICTORY_POINTS_15741: "Neiba"
  VICTORY_POINTS_4598: "Santiago de los Caballeros"
  VICTORY_POINTS_7660: "Santo Domingo"
 #320 - UPPER CANADA
@@ -1259,40 +1276,48 @@ VICTORY_POINTS_10271: "Vancouver"
  VICTORY_POINTS_7753: "Kelowna"
  VICTORY_POINTS_4428: "Surrey"
 #474 - YUCATAN
- VICTORY_POINTS_12715: "Mérida"
+ VICTORY_POINTS_14476: "Campeche"
+ VICTORY_POINTS_14484: "Mérida"
 #475 - CHIAPAS
- VICTORY_POINTS_12753: "Tuxtla Gutiérrez"
+ VICTORY_POINTS_1900: "San Cristóbal"
+ VICTORY_POINTS_14455: "San Marcos Tuxtla"
 #476 - OAXACA
  VICTORY_POINTS_13280: "Coatzacoalcos"
- VICTORY_POINTS_10773: "Oaxaca de Juárez"
+ VICTORY_POINTS_14650: "Oaxaca"
+ VICTORY_POINTS_14647: "Tehuantepec"
 #477 - VERACRUZ
- VICTORY_POINTS_12810: "Veracruz"
+ VICTORY_POINTS_13280: "Coatzacoalcos"
+ VICTORY_POINTS_14662: "Veracruz"
+ VICTORY_POINTS_10732: "Xalapa"
 #478 - JALISCO
+ VICTORY_POINTS_2051: "Colima"
  VICTORY_POINTS_13089: "Guadalajara"
- VICTORY_POINTS_12746: "Tepic"
+ VICTORY_POINTS_12746: "San Blas"
 #479 - TAMAULIPAS
- VICTORY_POINTS_12721: "Ciudad Victoria"
- VICTORY_POINTS_4956: "San Luis Potosi"
+ VICTORY_POINTS_12721: "Aguayo"
+ VICTORY_POINTS_4956: "San Luis Potosí"
  VICTORY_POINTS_5021: "Tampico"
 #480 - COAHUILA
  VICTORY_POINTS_12835: "Monterrey"
- VICTORY_POINTS_8003: "Torreón"
+ VICTORY_POINTS_8003: "Aviles"
+ VICTORY_POINTS_14687: "Saltillo"
 #481 - DURANGO
- VICTORY_POINTS_8057: "Mazatlán"
+ VICTORY_POINTS_4946: "Durango"
 #482 - CHIHUAHUA
- VICTORY_POINTS_12745: "Chihuahua"
- VICTORY_POINTS_10830: "Delicias"
- VICTORY_POINTS_5044: "El Paso del Norte"
+ VICTORY_POINTS_12745: "Ciudad de Chihuahua"
+ VICTORY_POINTS_5044: "El Paso"
+ VICTORY_POINTS_10830: "Santa Rosalía"
 #483 - SONORA
  VICTORY_POINTS_4908: "Guaymas"
  VICTORY_POINTS_10848: "Hermosillo"
  VICTORY_POINTS_3834: "Tucsón"
 #484 - BAJA CALIFORNIA
  VICTORY_POINTS_12461: "Ensenada"
- VICTORY_POINTS_12736: "La Paz"
+ VICTORY_POINTS_14683: "La Paz"
+ VICTORY_POINTS_14690: "San Ignacio"
 #485 - GUERRERO
- VICTORY_POINTS_10730: "Chilpancingo"
- VICTORY_POINTS_8032: "Ciudad Lázaro Cárdenas"
+ VICTORY_POINTS_10730: "Acapulco"
+ VICTORY_POINTS_14651: "Chilpancingo"
 #486 - META
  VICTORY_POINTS_1887: "Pore"
 #487 - SANTA CRUZ
@@ -1311,7 +1336,6 @@ VICTORY_POINTS_10271: "Vancouver"
  VICTORY_POINTS_13451: "Puno"
 #493 - LA LIBERTAD
  VICTORY_POINTS_2023: "Medellin"
- VICTORY_POINTS_7630: "Panamá"
 #494 - UCAYALI
 #495 - SANTAREM
  VICTORY_POINTS_13538: "Santarém do Pará"
@@ -1844,12 +1868,16 @@ VICTORY_POINTS_7453: "Heldstad"
 #690 - NORTHERN BAHAMAS
  VICTORY_POINTS_10254: "Nassau"
 #691 - TRINIDAD
- VICTORY_POINTS_3284: "Port of Spain"
+ VICTORY_POINTS_3284: "Belmont"
 #692 - WINDWARD ISLANDS
+ VICTORY_POINTS_379: "Kingstown"
 #693 - SOUTHERN BAHAMAS
-#694 - FRENCH CARIBBEAN
-#695 - CURACAO
+#694 - CROSSWIND ISLANDS
+ VICTORY_POINTS_177: "Annesbury"
+#695 - LEEWARD ANTILLES
+ VICTORY_POINTS_13405: "Willemstad"
 #696 - BERMUDA
+ VICTORY_POINTS_13010: "Hamilton"
 #697 - MADEIRA
  VICTORY_POINTS_3118: "Funchal"
 #698 - AZORES
@@ -2016,7 +2044,9 @@ VICTORY_POINTS_7453: "Heldstad"
 #777 - TOGO
  VICTORY_POINTS_1951: "Lomé"
 #778 - LOS ALTOS
+ VICTORY_POINTS_14451: "Huehuetenengo"
  VICTORY_POINTS_10842: "Quetzaltenango"
+ VICTORY_POINTS_14444: "Tapachula"
 #779 - HONDURAN MISKITO
 #780 - MISKITO COAST
  VICTORY_POINTS_13208: "Bluefields"
@@ -2111,7 +2141,8 @@ VICTORY_POINTS_9847: "Norwalk"
  VICTORY_POINTS_6864: "Dardanellia"
 #823 - AYDIN
  VICTORY_POINTS_10038: "Aydin"
-#824 - DANISH ANTILLES
+#824 - VIRGIN ISLANDS
+ VICTORY_POINTS_4155: "Christiansted"
 #825 - LIMOGES
  VICTORY_POINTS_620: "Limoges"
 #826 - PORT-PHILIPPE
@@ -2262,7 +2293,7 @@ VICTORY_POINTS_9847: "Norwalk"
 #906 - TI'TSA-PA
  VICTORY_POINTS_12535: "Ti'tsa-pa"
 #907 - WEST RIO GRANDE
- VICTORY_POINTS_10740: "El Paso del Libertad"
+ VICTORY_POINTS_10740: "Ysleta"
 #908 - EAST ITURBIDES
  VICTORY_POINTS_12791: "Las Cruces"
  VICTORY_POINTS_13301: "Santa Fe"
@@ -2337,11 +2368,12 @@ VICTORY_POINTS_4444: "Forest City"
  VICTORY_POINTS_10569: "Norton"
 #945 - PINE NUT MOUNTAINS
  VICTORY_POINTS_11698: "Humility"
-#946 - SOUTHERN RIO GRANDE
- VICTORY_POINTS_5015: "Matamoros"
- VICTORY_POINTS_2060: "Nuevo Laredo"
+#946 - MONCLOVA
+ VICTORY_POINTS_13298: "Monclova"
 #947 - NORTHERN RIO GRANDE
+ VICTORY_POINTS_12369: "Ciudad de Río Grande"
  VICTORY_POINTS_6785: "Corpus Christi"
+ VICTORY_POINTS_5061: "Laredo"
 #948 - STEPHENS
 VICTORY_POINTS_4757: "Bowieville"
 #949 - SUVALKI
@@ -2740,7 +2772,16 @@ VICTORY_POINTS_4757: "Bowieville"
 #1176 - ISLE OF MAN
 #1177 - GELDERLAND
  VICTORY_POINTS_9403: "Enschede"
-#1221 - COAST ESSEQUIBO
+#1212 - TABASCO
+ VICTORY_POINTS_14466: "San Juan Bautista"
+#1212 - PETEN
+ VICTORY_POINTS_14458: "Flores"
+#1213 - TEGUZGALPA
+ VICTORY_POINTS_14424: "Teguzgalpa"
+#1215 - PANAMA
+ VICTORY_POINTS_14396: "Panamá"
+ VICTORY_POINTS_4611: "San José de David"
+#1218 - COAST ESSEQUIBO
  VICTORY_POINTS_13551: "Marlborough"
 #1221 - AMAZONOPOLIS
  VICTORY_POINTS_10934: "Amazonópolis"
@@ -2851,11 +2892,29 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_14546: "Morón"
 #1368 - CHILOE ISLAND
  VICTORY_POINTS_13462: "Ancud"
-
+#1369 - HORIZON ISLANDS
+ VICTORY_POINTS_13084: "Philipsburg"
+#1370 - PUEBLA
+ VICTORY_POINTS_14656: "Puebla"
+#1371 - GUANAJUATO
+ VICTORY_POINTS_2008: "Guanajuato"
+ VICTORY_POINTS_14671: "Querétaro"
+#1372 - TAMAULIPAS
+ VICTORY_POINTS_5015: "Matamoros"
+#1373 - MIHOACAN
+ VICTORY_POINTS_12755: "Morelia"
+ VICTORY_POINTS_8032: "Puerto Orilla"
+#1374 - ZACATECAS
+ VICTORY_POINTS_10172: "Aguacaliente"
+ VICTORY_POINTS_15746: "Zacatecas"
+#1374 - SINALOA
+ VICTORY_POINTS_8057: "Culiacán"
+ VICTORY_POINTS_10895: "Mazatlán"
+ VICTORY_POINTS_1945: "Sinaloa"
 #1400 - WEST SUMATRA
  VICTORY_POINTS_10354: "Padang"
 
-#1401- BENGGKULU
+#1401- BENGKULU
  VICTORY_POINTS_12138: "Bengkulu"
  VICTORY_POINTS_7308: "Mana"
 
@@ -3173,7 +3232,7 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_3379:0 "Belfast"
  VICTORY_POINTS_6384:0 "Liverpool"
  VICTORY_POINTS_9379:0 "Leeds"
- VICTORY_POINTS_10254:0 "Nassau"
+
  VICTORY_POINTS_870:0 "Miamis"
  VICTORY_POINTS_11635:0 "Evansville"
  VICTORY_POINTS_9392:0 "Edinburgh"
@@ -3654,25 +3713,16 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_12149:0 "Québec"
  VICTORY_POINTS_7433:0 "Lévis"
  VICTORY_POINTS_10230:0 "Nolain"
- VICTORY_POINTS_1965:0 "Mexico City"
- VICTORY_POINTS_4956:0 "San Luis Potosi"
- VICTORY_POINTS_12810:0 "Veracruz"
+
+
  VICTORY_POINTS_12835:0 "Monterrey"
- VICTORY_POINTS_13089:0 "Guadalajara"
- VICTORY_POINTS_10886:0 "Guatemala"
- VICTORY_POINTS_12823:0 "San Salvador"
- VICTORY_POINTS_12865:0 "Tegucigalpa"
- VICTORY_POINTS_12738:0 "Managua"
- VICTORY_POINTS_13087:0 "San Jose"
- VICTORY_POINTS_7630:0 "Panamá"
- VICTORY_POINTS_7622:0 "Havana"
- VICTORY_POINTS_12304:0 "Kingston"
- VICTORY_POINTS_3284:0 "Port of Spain"
- VICTORY_POINTS_7590:0 "Guantánamo"
- VICTORY_POINTS_4641:0 "Port-au-Prince"
+
+
+
+
+
  VICTORY_POINTS_9097:0 "Oranienbaum"
- VICTORY_POINTS_7660:0 "Santo Domingo"
- VICTORY_POINTS_4598:0 "Santiago de los Caballeros"
+
 
  VICTORY_POINTS_8140:0 "Vila Boa"
 
@@ -4044,15 +4094,14 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_9980:0 "Misratah"
  VICTORY_POINTS_8243:0 "Albany"
  VICTORY_POINTS_12715:0 "Mérida"
- VICTORY_POINTS_13207:0 "Bragman's Bluff"
- VICTORY_POINTS_13208:0 "Bluefields"
- VICTORY_POINTS_10842:0 "Quetzaltenango"
+
+
  VICTORY_POINTS_7887:0 "Kirikiriroa"
  VICTORY_POINTS_8241:0 "Invercargill"
  VICTORY_POINTS_4985:0 "Sagallo"
  VICTORY_POINTS_12211:0 "Libertalia"
  VICTORY_POINTS_10582:0 "El lago Salado"
- VICTORY_POINTS_12721:0 "Ciudad Victoria"
+
  VICTORY_POINTS_9637:0 "Monterrey de California"
  VICTORY_POINTS_11905:0 "Alexandroupolis"
  VICTORY_POINTS_10535:0 "Boomtown"
@@ -4244,29 +4293,20 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_1088:0 "Latakia"
  VICTORY_POINTS_6522:0 "Rzeszów"
  VICTORY_POINTS_3230:0 "Plock"
- VICTORY_POINTS_12753:0 "Tuxtla Gutiérrez"
- VICTORY_POINTS_10773:0 "Oaxaca de Juárez"
- VICTORY_POINTS_10730:0 "Chilpancingo"
- VICTORY_POINTS_8032:0 "Ciudad Lázaro Cárdenas"
- VICTORY_POINTS_12746:0 "Tepic"
- VICTORY_POINTS_8057:0 "Mazatlán"
- VICTORY_POINTS_10848:0 "Hermosillo"
+
+
+
+
+
  VICTORY_POINTS_11420:0 "Amiens"
  VICTORY_POINTS_11959:0 "Taichung"
  VICTORY_POINTS_10124:0 "Nago"
- VICTORY_POINTS_8003:0 "Torreón"
- VICTORY_POINTS_10830:0 "Delicias"
- VICTORY_POINTS_12745:0 "Chihuahua"
- VICTORY_POINTS_5044:0 "El Paso del Norte"
- VICTORY_POINTS_3834:0 "Tucsón"
- VICTORY_POINTS_12461:0 "Ensenada"
- VICTORY_POINTS_13280:0 "Coatzacoalcos"
- VICTORY_POINTS_10740:0 "El Paso del Libertad"
- VICTORY_POINTS_6785:0 "Corpus Christi"
- VICTORY_POINTS_5015:0 "Matamoros"
- VICTORY_POINTS_2060:0 "Nuevo Laredo"
- VICTORY_POINTS_2008:0 "León de los Aldama"
- VICTORY_POINTS_5021:0 "Tampico"
+
+
+
+
+
+
  VICTORY_POINTS_4908:0 "Guaymas"
  VICTORY_POINTS_4590:0 "Freetown"
  VICTORY_POINTS_1523:0 "Allenchurch"
