southern africa rework

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -830,8 +830,8 @@
 
  DAF_ni:0 "German Central Africa"
  DAF_ni_DEF:0 "The Colony of German Central Africa"
- DAF_ds:0 "German Central Africa"
- DAF_ds_DEF:0 "The Colony of German Central Africa"
+ DAF_ds:0 "Colonies of Central Afrika"
+ DAF_ds_DEF:0 "the United Colonies of Central Afrika"
  DAF_rc:0 "German Central Africa"
  DAF_rc_DEF:0 "The Colony of German Central Africa"
  DAF_an:0 "German Central Africa"
@@ -1077,8 +1077,7 @@
  HYD_ds_ADJ:0 "Deccan"
  HYD_cn_ADJ:0 "Deccan"
  HYD_an_ADJ:0 "Deccan"
-
-#Formerly Hindustan
+ 
  AWD_ni:0 "Republic of South India"
  AWD_ni_DEF:0 "Republic of South India"
  AWD_ds:0 "Republic of South India"
@@ -2770,31 +2769,6 @@ MPC_an_ADJ:0 "Mapuche"
  BDT_cn_ADJ:0 "Bandit"
  BDT_an_ADJ:0 "Bandit"
 
- ANH_ni:0 "New National Protection Committee"
- ANH_ni_DEF:0 "the New National Protection Committee"
- ANH_ds:0 "New National Protection Committee"
- ANH_ds_DEF:0 "the New National Protection Committee"
- ANH_rc:0 "New National Protection Committee"
- ANH_rc_DEF:0 "the New National Protection Committee"
- ANH_an:0 "New National Protection Committee"
- ANH_an_DEF:0 "the New National Protection Committee"
- ANH_cn:0 "New National Protection Committee"
- ANH_cn_DEF:0 "the New National Protection Committee"
- ANH_lb:0 "New National Protection Committee"
- ANH_lb_DEF:0 "the New National Protection Committee"
- ANH_ss:0 "New National Protection Committee"
- ANH_ss_DEF:0 "the New National Protection Committee"
- ANH_jc:0 "New National Protection Committee"
- ANH_jc_DEF:0 "the New National Protection Committee"
- ANH_ni_ADJ:0 "Chinese"
- ANH_rc_ADJ:0 "Chinese"
- ANH_lb_ADJ:0 "Chinese"
- ANH_ss_ADJ:0 "Chinese"
- ANH_jc_ADJ:0 "Chinese"
- ANH_ds_ADJ:0 "Chinese"
- ANH_cn_ADJ:0 "Chinese"
- ANH_an_ADJ:0 "Chinese"
-
  GUI_ni:0 "Guizhou Clique"
  GUI_ni_DEF:0 "the Guizhou Clique"
  GUI_ds:0 "Guizhou Clique"
@@ -3960,8 +3934,8 @@ BDK_an_ADJ:0 "Indian"
 
  PEF_ni:0 "Portuguese Kingdom in Exile"
  PEF_ni_DEF:0 "The Portuguese Kingdom in Exile"
- PEF_ds:0 "Portuguese Kingdom in Exile"
- PEF_ds_DEF:0 "The Portuguese Kingdom in Exile"
+ PEF_ds:0 "Portuguese Empire"
+ PEF_ds_DEF:0 "The Portuguese Empire"
  PEF_rc:0 "Portuguese Kingdom in Exile"
  PEF_rc_DEF:0 "The Portuguese Kingdom in Exile"
  PEF_an:0 "Portuguese Kingdom in Exile"
@@ -3985,8 +3959,8 @@ BDK_an_ADJ:0 "Indian"
 
  SDW_ni:0 "Südwestafrika"
  SDW_ni_DEF:0 "The Colony of Deutsch-Südwestafrika"
- SDW_ds:0 "Südwestafrika"
- SDW_ds_DEF:0 "The Colony of Deutsch-Südwestafrika"
+ SDW_ds:0 "Southwest African Protectorate"
+ SDW_ds_DEF:0 "the Southwest African Protectorate"
  SDW_rc:0 "Südwestafrika"
  SDW_rc_DEF:0 "The Colony of Deutsch-Südwestafrika"
  SDW_an:0 "Südwestafrika"
@@ -4141,8 +4115,8 @@ BDK_an_ADJ:0 "Indian"
  GOS_rc_DEF:0 "The Republic of Goshen"
  GOS_an:0 "Republic of Goshen"
  GOS_an_DEF:0 "The Republic of Goshen"
- GOS_cn:0 "Republic of Goshen"
- GOS_cn_DEF:0 "The Republic of Goshen"
+ GOS_cn:0 "Republic of Transvaal"
+ GOS_cn_DEF:0 "the Republic of Transvaal"
  GOS_lb:0 "Republic of Goshen"
  GOS_lb_DEF:0 "The Republic of Goshen"
  GOS_ss:0 "Republic of Goshen"
@@ -4158,35 +4132,10 @@ BDK_an_ADJ:0 "Indian"
  GOS_cn_ADJ:0 "Goshen"
  GOS_an_ADJ:0 "Goshen"
 
- NRP_ni:0 "New Republic"
- NRP_ni_DEF:0 "The New Republic"
- NRP_ds:0 "New Republic"
- NRP_ds_DEF:0 "The New Republic"
- NRP_rc:0 "New Republic"
- NRP_rc_DEF:0 "The New Republic"
- NRP_an:0 "New Republic"
- NRP_an_DEF:0 "The New Republic"
- NRP_cn:0 "New Republic"
- NRP_cn_DEF:0 "The New Republic"
- NRP_lb:0 "New Republic"
- NRP_lb_DEF:0 "The New Republic"
- NRP_ss:0 "New Republic"
- NRP_ss_DEF:0 "The New Republic"
- NRP_jc:0 "New Republic"
- NRP_jc_DEF:0 "The New Republic"
- NRP_ni_ADJ:0 "New Republican"
- NRP_rc_ADJ:0 "New Republican"
- NRP_lb_ADJ:0 "New Republican"
- NRP_ss_ADJ:0 "New Republican"
- NRP_jc_ADJ:0 "New Republican"
- NRP_ds_ADJ:0 "New Republican"
- NRP_cn_ADJ:0 "New Republican"
- NRP_an_ADJ:0 "New Republican"
-
  SWA_ni:0 "Swaziland"
  SWA_ni_DEF:0 "The Kingdom of Swaziland"
- SWA_ds:0 "Swaziland"
- SWA_ds_DEF:0 "The Kingdom of Swaziland"
+ SWA_ds:0 "Kingdom of Eswatini"
+ SWA_ds_DEF:0 "the Kingdom of Eswatini"
  SWA_rc:0 "Swaziland"
  SWA_rc_DEF:0 "The Kingdom of Swaziland"
  SWA_an:0 "Swaziland"
@@ -5138,8 +5087,8 @@ BDK_an_ADJ:0 "Indian"
 
  COG_ni:0 "United States of the Kongo"
  COG_ni_DEF:0 "The United States of the Kongo"
- COG_ds:0 "United States of the Kongo"
- COG_ds_DEF:0 "The United States of the Kongo"
+ COG_ds:0 "Kingdom of Kongo"
+ COG_ds_DEF:0 "The Kingdom of Kongo"
  COG_rc:0 "United States of the Kongo"
  COG_rc_DEF:0 "The United States of the Kongo"
  COG_an:0 "United States of the Kongo"
@@ -5171,8 +5120,8 @@ BDK_an_ADJ:0 "Indian"
  AZA_an_DEF:0 "The Free People of Azandeland"
  AZA_cn:0 "East African Federation"
  AZA_cn_DEF:0 "The East African Federation"
- AZA_lb:0 "Azandeland"
- AZA_lb_DEF:0 "The Free People of Azandeland"
+ AZA_lb:0 "East Africa Protectorate"
+ AZA_lb_DEF:0 "the East Africa Protectorate"
  AZA_ss:0 "Azandeland"
  AZA_ss_DEF:0 "The Free People of Azandeland"
  AZA_jc:0 "Azandeland"
@@ -5388,8 +5337,8 @@ BDK_an_ADJ:0 "Indian"
 
  BAR_ni:0 "Republic of Barotseland"
  BAR_ni_DEF:0 "The Republic of Barotseland"
- BAR_ds:0 "Republic of Barotseland"
- BAR_ds_DEF:0 "The Republic of Barotseland"
+ BAR_ds:0 "Kingdom of Barotseland"
+ BAR_ds_DEF:0 "The Kingdom of Barotseland"
  BAR_rc:0 "Republic of Barotseland"
  BAR_rc_DEF:0 "The Republic of Barotseland"
  BAR_an:0 "Republic of Barotseland"
@@ -5419,8 +5368,8 @@ BDK_an_ADJ:0 "Indian"
  ZAM_rc_DEF:0 "The Federation of Zambia"
  ZAM_an:0 "Federation of Zambia"
  ZAM_an_DEF:0 "The Federation of Zambia"
- ZAM_cn:0 "Federation of Zambia"
- ZAM_cn_DEF:0 "The Federation of Zambia"
+ ZAM_cn:0 "Chainbreakers"
+ ZAM_cn_DEF:0 "the Chainbreakers"
  ZAM_lb:0 "Federation of Zambia"
  ZAM_lb_DEF:0 "The Federation of Zambia"
  ZAM_ss:0 "Federation of Zambia"
@@ -5444,8 +5393,8 @@ BDK_an_ADJ:0 "Indian"
  ANG_rc_DEF:0 "The Republic of Angola"
  ANG_an:0 "Republic of Angola"
  ANG_an_DEF:0 "The Republic of Angola"
- ANG_cn:0 "Republic of Angola"
- ANG_cn_DEF:0 "The Republic of Angola"
+ ANG_cn:0 "Sociogenetic Republic of Lusitania"
+ ANG_cn_DEF:0 "The Sociogenetic Republic of Lusitania"
  ANG_lb:0 "Republic of Angola"
  ANG_lb_DEF:0 "The Republic of Angola"
  ANG_ss:0 "Republic of Angola"
@@ -5469,8 +5418,8 @@ BDK_an_ADJ:0 "Indian"
  MZB_rc_DEF:0 "The Republic of Mozambique"
  MZB_an:0 "Republic of Mozambique"
  MZB_an_DEF:0 "The Republic of Mozambique"
- MZB_cn:0 "Republic of Mozambique"
- MZB_cn_DEF:0 "The Republic of Mozambique"
+ MZB_cn:0 "Mozambique Stablisation Territory"
+ MZB_cn_DEF:0 "the Mozambique Stablisation Territory"
  MZB_lb:0 "Republic of Mozambique"
  MZB_lb_DEF:0 "The Republic of Mozambique"
  MZB_ss:0 "Republic of Mozambique"
@@ -5494,8 +5443,8 @@ BDK_an_ADJ:0 "Indian"
  ZIM_rc_DEF:0 "The United Republic of Zimbabwe"
  ZIM_an:0 "Zimbabwe"
  ZIM_an_DEF:0 "The United Republic of Zimbabwe"
- ZIM_cn:0 "Zimbabwe"
- ZIM_cn_DEF:0 "The United Republic of Zimbabwe"
+ ZIM_cn:0 "Lord's Chosen"
+ ZIM_cn_DEF:0 "the Lord's Chosen"
  ZIM_lb:0 "Zimbabwe"
  ZIM_lb_DEF:0 "The United Republic of Zimbabwe"
  ZIM_ss:0 "Zimbabwe"
@@ -7136,31 +7085,6 @@ BDK_an_ADJ:0 "Indian"
  ALW_cn_ADJ:0 "Alawite"
  ALW_an_ADJ:0 "Alawite"
 
- DRZ_ni:0 "Jabal Druze"
- DRZ_ni_DEF:0 "The State of Jabal Druze"
- DRZ_ds:0 "Jabal Druze"
- DRZ_ds_DEF:0 "The State of Jabal Druze"
- DRZ_rc:0 "Jabal Druze"
- DRZ_rc_DEF:0 "The State of Jabal Druze"
- DRZ_an:0 "Jabal Druze"
- DRZ_an_DEF:0 "The State of Jabal Druze"
- DRZ_cn:0 "Jabal Druze"
- DRZ_cn_DEF:0 "The State of Jabal Druze"
- DRZ_lb:0 "Jabal Druze"
- DRZ_lb_DEF:0 "The State of Jabal Druze"
- DRZ_ss:0 "Jabal Druze"
- DRZ_ss_DEF:0 "The State of Jabal Druze"
- DRZ_jc:0 "Jabal Druze"
- DRZ_jc_DEF:0 "The State of Jabal Druze"
- DRZ_ni_ADJ:0 "Druze"
- DRZ_rc_ADJ:0 "Druze"
- DRZ_lb_ADJ:0 "Druze"
- DRZ_ss_ADJ:0 "Druze"
- DRZ_jc_ADJ:0 "Druze"
- DRZ_ds_ADJ:0 "Druze"
- DRZ_cn_ADJ:0 "Druze"
- DRZ_an_ADJ:0 "Druze"
-
  AZR_ni:0 "Azerbijan"
  AZR_ni_DEF:0 "The Free State of Azerbijan"
  AZR_ds:0 "Azerbijan"
@@ -7960,31 +7884,6 @@ BDK_an_ADJ:0 "Indian"
  SJP_ds_ADJ:0 "Japanese"
  SJP_cn_ADJ:0 "Japanese"
  SJP_an_ADJ:0 "Japanese"
-
- NCH_ni:0 "Northern Reorganized National Government of China"
- NCH_ni_DEF:0 "The Northern Reorganized National Government of China"
- NCH_ds:0 "Northern Reorganized National Government of China"
- NCH_ds_DEF:0 "The Northern Reorganized National Government of China"
- NCH_rc:0 "Northern Reorganized National Government of China"
- NCH_rc_DEF:0 "The Northern Reorganized National Government of China"
- NCH_an:0 "Northern Reorganized National Government of China"
- NCH_an_DEF:0 "The Northern Reorganized National Government of China"
- NCH_cn:0 "Northern Reorganized National Government of China"
- NCH_cn_DEF:0 "The Northern Reorganized National Government of China"
- NCH_lb:0 "Northern Reorganized National Government of China"
- NCH_lb_DEF:0 "The Northern Reorganized National Government of China"
- NCH_ss:0 "Northern Reorganized National Government of China"
- NCH_ss_DEF:0 "The Northern Reorganized National Government of China"
- NCH_jc:0 "Northern Reorganized National Government of China"
- NCH_jc_DEF:0 "The Northern Reorganized National Government of China"
- NCH_ni_ADJ:0 "North Chinese"
- NCH_rc_ADJ:0 "North Chinese"
- NCH_lb_ADJ:0 "North Chinese"
- NCH_ss_ADJ:0 "North Chinese"
- NCH_jc_ADJ:0 "North Chinese"
- NCH_ds_ADJ:0 "North Chinese"
- NCH_cn_ADJ:0 "North Chinese"
- NCH_an_ADJ:0 "North Chinese"
 
  RSC_ni:0 "Russian Concessions Territories"
  RSC_ni_DEF:0 "the Russian Concessions Territories"
@@ -9027,6 +8926,22 @@ MLT_an_ADJ:0 "Maltese"
  ASS:0 "Sultanate of Aussa"
  ASS_DEF:0 "the Sultanate of Aussa"
  ASS_ADJ:0 "Aussan"
+
+ RRC:0 "Rhodes Air Rifle Corps"
+ RRC_DEF:0 "the Rhodes Air Rifle Corps"
+ RRC_ADJ:0 "Rhodesian"
+
+ BAE:0 "New Bantu Empire"
+ BAE_DEF:0 "the New Bantu Empire"
+ BAE_ADJ:0 "Bantu"
+
+ LFS:0 "Lusophone Free State"
+ LFS_DEF:0 "the Lusophone Free State"
+ LFS_ADJ:0 "Lusophonian"
+
+ CAP:0 "British Capeloland"
+ CAP_DEF:0 "British Capeloland"
+ CAP_ADJ:0 "Capelolandian"
 
 ###################################
 # TEMPLATE
