americas supply and UCA vps

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -359,7 +359,7 @@
  VICTORY_POINTS_9379: "Leeds"
  VICTORY_POINTS_9315: "Sheffield"
 #131 - NORTHERN ENGLAND
- VICTORY_POINTS_351: "Newcastle"
+ VICTORY_POINTS_351: "Newcastle upon Tyne"
 #132 - LANCASHIRE
  VICTORY_POINTS_6384: "Liverpool"
  VICTORY_POINTS_6318: "Manchester"
@@ -685,8 +685,13 @@
 #260 - VORONEZH
  VICTORY_POINTS_413: "Voronezh"
 #261 - OHIO
+ VICTORY_POINTS_4601: "Cincinnati"
+ VICTORY_POINTS_3685: "Coldpoint"
  VICTORY_POINTS_6855: "Columbus"
  VICTORY_POINTS_6890: "Melbourne"
+ VICTORY_POINTS_9808: "New Cambridge"
+ VICTORY_POINTS_971: "Oxtown"
+ VICTORY_POINTS_11791: "Rawson"
 #262 - PECHORA
 #263 - VELIKY NOVGOROD
  VICTORY_POINTS_9234: "Staraya Russa"
@@ -962,58 +967,94 @@
  VICTORY_POINTS_7462: "Castle Rock"
  VICTORY_POINTS_12459: "Derry"
  VICTORY_POINTS_3732: "Falmouth"
+ VICTORY_POINTS_1619: "St. Andrew"
 #358 - NEW YORK
  VICTORY_POINTS_9693: "Albany"
  VICTORY_POINTS_11654: "Buffalo"
- VICTORY_POINTS_9708: "Syracuse"
+ VICTORY_POINTS_6911: "Claverack"
+ VICTORY_POINTS_6778: "Coalville"
+ VICTORY_POINTS_9708: "New Hartford"
+ VICTORY_POINTS_11650: "Sleaford"
  VICTORY_POINTS_3806: "Troy"
- VICTORY_POINTS_6911: "Yonkers"
  VICTORY_POINTS_3733: "Zouterbommel"
 #359 - NEW JERSEY
  VICTORY_POINTS_9801: "Albertia"
  VICTORY_POINTS_11900: "Camden"
  VICTORY_POINTS_11782: "Edison"
+ VICTORY_POINTS_14735: "Jersey City"
  VICTORY_POINTS_6882: "Newark" 
+ VICTORY_POINTS_14730: "Trenton"
 #360 - PENNSYLVANIA
  VICTORY_POINTS_11799: "Allentown"
  VICTORY_POINTS_12405: "Altoona"
+ VICTORY_POINTS_11758: "Bercerville"
+ VICTORY_POINTS_14525: "New Bristol"
  VICTORY_POINTS_3687: "Erie"
  VICTORY_POINTS_11785: "Harrisburg"
+ VICTORY_POINTS_14529: "Norristown"
  VICTORY_POINTS_6845: "Philadelphia"
- VICTORY_POINTS_11800: "Pittsburgh"
+ VICTORY_POINTS_14732: "Pittsburgh"
+ VICTORY_POINTS_3897: "Slocumboro"
 #361 - MARYLAND
+ VICTORY_POINTS_13392: "Annapolis"
+ VICTORY_POINTS_9786: "Port Atlantic"
  VICTORY_POINTS_6984: "Baltimore"
  VICTORY_POINTS_6929: "Frederick"
  VICTORY_POINTS_3957: "Georgetown"
+ VICTORY_POINTS_14532: "Shelburne"
  VICTORY_POINTS_9758: "Wilmington"
 #362 - VIRGINIA
+ VICTORY_POINTS_11873: "Beverley"
+ VICTORY_POINTS_3917: "Chrisfield"
+ VICTORY_POINTS_7558: "Morion"
+ VICTORY_POINTS_9931: "New Clover"
  VICTORY_POINTS_788: "Norfolk"
  VICTORY_POINTS_3823: "Richmond"
 #363 - ALBEMARLE
  VICTORY_POINTS_7138: "Charlotte"
- VICTORY_POINTS_10909: "Chattanooga"
- VICTORY_POINTS_7045: "Raleigh"
+ VICTORY_POINTS_7045: "Dureight"
+ VICTORY_POINTS_10495: "Erwinburg"
+ VICTORY_POINTS_10909: "Murphyville"
+ VICTORY_POINTS_4168: "Tarleton"
  VICTORY_POINTS_1132: "Wilmington"
+ VICTORY_POINTS_9876: "Victoria Town"
 #364 - CLARENDON
+ VICTORY_POINTS_1485: "Abbeville"
  VICTORY_POINTS_7202: "Charleston"
  VICTORY_POINTS_7527: "Columbia"
+ VICTORY_POINTS_11927: "Effington"
+ VICTORY_POINTS_7012: "Morningwood"
 #365 - GEORGIA
- VICTORY_POINTS_638: "Gotha"
+ VICTORY_POINTS_7118: "Augusta"
+ VICTORY_POINTS_7612: "Gotha"
  VICTORY_POINTS_12498: "New Liverpool"
  VICTORY_POINTS_11975: "Savannah"
+ VICTORY_POINTS_1433: "Waresboro"
 #366 - SEMINOLE
  VICTORY_POINTS_12381: "Brisbane"
- VICTORY_POINTS_1843: "Miami"
+ VICTORY_POINTS_10407: "Crawford"
+ VICTORY_POINTS_1843: "Everglade Beach"
+ VICTORY_POINTS_866: "Flemington"
+ VICTORY_POINTS_14698: "Fudgehall"
  VICTORY_POINTS_7388: "Tampa"
+ VICTORY_POINTS_14696: "Thlothlopopka-Hatchee"
 #367 - ALABAMA
+ VICTORY_POINTS_10520: "Alberton"
  VICTORY_POINTS_492: "New Philadelphia"
- VICTORY_POINTS_12384: "Atlanta"
+ VICTORY_POINTS_10352: "Pensacola"
 #368 - ETOWAH
  VICTORY_POINTS_12384: "Atlanta"
+ VICTORY_POINTS_14705: "Gloverville"
+ VICTORY_POINTS_968: "Griffith"
+ VICTORY_POINTS_11509: "Oakash"
 #369 - KENTUCKY
+ VICTORY_POINTS_4402: "Jonesboro"
  VICTORY_POINTS_913: "Knoxville"
+ VICTORY_POINTS_4988: "Somerset"
  VICTORY_POINTS_6696: "Victoria"
 #370 - DOUGLAS
+ VICTORY_POINTS_14707: "Germantown"
+ VICTORY_POINTS_4510: "Marigoldboro"
  VICTORY_POINTS_7797: "Memphis"
  VICTORY_POINTS_10586: "Paduke"
  VICTORY_POINTS_10753: "Tupelo"
@@ -1076,7 +1117,7 @@
  VICTORY_POINTS_7721: "Brigham"
 #386 - NORTH INTERIOR
  VICTORY_POINTS_10198: "Twin Peaks"
-VICTORY_POINTS_10271: "Vancouver"
+ VICTORY_POINTS_10271: "Vancouver"
 #387 - NEZ PERCE
  VICTORY_POINTS_12124: "Coeur d'Alene"
 #388 - BLACKFOOT
@@ -1104,11 +1145,14 @@ VICTORY_POINTS_10271: "Vancouver"
  VICTORY_POINTS_4166: "La Baie des Puants"
  VICTORY_POINTS_12357: "Milwaukee"
 #395 - ILLINOIS
+ VICTORY_POINTS_7611: "Galesburgh" 
+ VICTORY_POINTS_954: "Goslingburg" 
  VICTORY_POINTS_12697: "Springfield" 
  VICTORY_POINTS_10457: "Winchester"
 #396 - INDIANA
  VICTORY_POINTS_11635: "Evansville"
  VICTORY_POINTS_1595: "Indianapolis"
+ VICTORY_POINTS_4527: "Swanport"
 #397 - KOMI
  VICTORY_POINTS_186: "Kotlas"
  VICTORY_POINTS_6121: "Ust-Sysolsk"
@@ -1271,9 +1315,12 @@ VICTORY_POINTS_10271: "Vancouver"
  VICTORY_POINTS_13091: "Novo-Odessa"
  VICTORY_POINTS_7884: "Pavlovskiy"
 #464 - NOVA SCOTIA
- VICTORY_POINTS_4430: "Cape Breton"
+ VICTORY_POINTS_4623: "Cape Royal"
  VICTORY_POINTS_7361: "Halifax"
+ VICTORY_POINTS_4430: "North Sydney"
 #465 - NEW BRUNSWICK
+ VICTORY_POINTS_4287: "Houlton"
+ VICTORY_POINTS_4432: "Newcastle"
  VICTORY_POINTS_4285: "Saint John"
 #466 - NORTH QUEBEC
 #467 - MANITOBA
@@ -1440,7 +1487,7 @@ VICTORY_POINTS_10271: "Vancouver"
 #522 - VLAMINGVELD
  VICTORY_POINTS_8243: "Albany"
  VICTORY_POINTS_1652: "Boltsholm"
-VICTORY_POINTS_7453: "Heldstad"
+ VICTORY_POINTS_7453: "Heldstad"
 #523 - PAPUA
  VICTORY_POINTS_7378: "Kokoda"
  VICTORY_POINTS_4329: "Port Moresby"
@@ -2125,19 +2172,27 @@ VICTORY_POINTS_7453: "Heldstad"
  VICTORY_POINTS_7646: "New Edinburgh"
  VICTORY_POINTS_801: "Silent Hill"
 #811 - LONG ISLAND
- VICTORY_POINTS_3878: "New York"
+ VICTORY_POINTS_859: "Kingport"
+ VICTORY_POINTS_3878: "New York City"
+ VICTORY_POINTS_13391: "NYC-Brooklyn"
+ VICTORY_POINTS_14736: "NYC-Yonkers"
 #812 - VERMONT
+ VICTORY_POINTS_9675: "Brattleboro"
  VICTORY_POINTS_4445: "Burlington"
+ VICTORY_POINTS_11662: "Plattsburgh"
 #813 - MASSACHUSSETTS
  VICTORY_POINTS_905: "Arkham"
  VICTORY_POINTS_6732: "Boston"
+ VICTORY_POINTS_14528: "Lowell"
  VICTORY_POINTS_3906: "New Bedford"
  VICTORY_POINTS_3710: "Worcester"
 #814 - CONNECTICUT
-VICTORY_POINTS_6909: "New Haven"
-VICTORY_POINTS_9847: "Norwalk"
+ VICTORY_POINTS_9850: "Hartford"
+ VICTORY_POINTS_6909: "New Haven"
+ VICTORY_POINTS_9847: "Norwalk"
  VICTORY_POINTS_11830: "Providence"
 #815 - NEW HAMPSHIRE
+ VICTORY_POINTS_10481: "Dalton"
  VICTORY_POINTS_3712: "Manchester"
 #816 - QUEBEC
  VICTORY_POINTS_4345: "Montréal"
@@ -2389,7 +2444,7 @@ VICTORY_POINTS_9847: "Norwalk"
 #940 - ROMANDE
  VICTORY_POINTS_6666: "Geneva"
 #941 - KANSAS
-VICTORY_POINTS_4444: "Forest City"
+ VICTORY_POINTS_4444: "Forest City"
  VICTORY_POINTS_1806: "New Charleston"
  VICTORY_POINTS_1534: "Robertstown"
  VICTORY_POINTS_7892: "Sunderling"
@@ -2411,7 +2466,7 @@ VICTORY_POINTS_4444: "Forest City"
  VICTORY_POINTS_6785: "Corpus Christi"
  VICTORY_POINTS_5061: "Laredo"
 #948 - STEPHENS
-VICTORY_POINTS_4757: "Bowieville"
+ VICTORY_POINTS_4757: "Bowieville"
 #949 - SUVALKI
  VICTORY_POINTS_11312: "Mariampol"
 #950 - CAVELIER
@@ -2435,12 +2490,15 @@ VICTORY_POINTS_4757: "Bowieville"
 #956 - NORTHERN ERGUN
  VICTORY_POINTS_12537: "Huzhong"
 #957 - MISSISSIPPI
+ VICTORY_POINTS_10449: "Aylesbury"
  VICTORY_POINTS_1453: "Baton Rouge"
  VICTORY_POINTS_7480: "Mobile"
+ VICTORY_POINTS_1615: "Shrewton"
  VICTORY_POINTS_4565: "Stirling"
-#958 - 
+#958 - CUMBERLAND
  VICTORY_POINTS_12501: "Adelaide"
  VICTORY_POINTS_12735: "Birmingham"
+ VICTORY_POINTS_10192: "Russelton"
 #959 - TIANJING
  VICTORY_POINTS_11913: "Tianjing"
  VICTORY_POINTS_13142: "Wujin"
@@ -3282,7 +3340,7 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_6103:0 "London"
  VICTORY_POINTS_3273:0 "Glasgow"
  VICTORY_POINTS_9297:0 "Birmingham"
- VICTORY_POINTS_351:0 "Newcastle"
+
  VICTORY_POINTS_3369:0 "Bristol"
  VICTORY_POINTS_3379:0 "Belfast"
  VICTORY_POINTS_6384:0 "Liverpool"
@@ -3680,7 +3738,7 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_10737:0 "Kabul"
  VICTORY_POINTS_4893:0 "Herat"
  VICTORY_POINTS_3957:0 "Georgetown"
- VICTORY_POINTS_3878:0 "New York"
+
  VICTORY_POINTS_9450:0 "Chicagou"
  VICTORY_POINTS_10583:0 "Bodaybo"
  VICTORY_POINTS_1794:0 "Barnaul"
@@ -3719,7 +3777,7 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_6732:0 "Boston"
  VICTORY_POINTS_6845:0 "Philadelphia"
  VICTORY_POINTS_6855:0 "Columbus"
- VICTORY_POINTS_4601:0 "Cincinnati"
+
  VICTORY_POINTS_6890:0 "Melbourne"
  VICTORY_POINTS_7138:0 "Charlotte"
  VICTORY_POINTS_7202:0 "Charleston"
@@ -3741,7 +3799,7 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_3806:0 "Troy"
  VICTORY_POINTS_9693:0 "Albany"
  VICTORY_POINTS_12357:0 "Milwaukee"
- VICTORY_POINTS_638:0 "Gotha"
+
 
  VICTORY_POINTS_12489:0 "Bayonne"
  VICTORY_POINTS_12501:0 "Adelaide"
@@ -3762,7 +3820,7 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_4345:0 "Montréal"
  VICTORY_POINTS_4872:0 "Winnipeg"
  VICTORY_POINTS_7361:0 "Halifax"
- VICTORY_POINTS_4430:0 "Cape Breton"
+
  VICTORY_POINTS_12505:0 "St. John's"
  VICTORY_POINTS_4285:0 "Saint John"
  VICTORY_POINTS_12149:0 "Québec"
@@ -4103,7 +4161,7 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_10671:0 "Samarkand"
  VICTORY_POINTS_12581:0 "Kokand"
  VICTORY_POINTS_12583:0 "Bishkek"
- VICTORY_POINTS_4565:0 "Stirling"
+
  VICTORY_POINTS_7797:0 "Memphis"
  VICTORY_POINTS_10586:0 "Paduke"
  VICTORY_POINTS_4854:0 "Marquette"
@@ -4111,7 +4169,7 @@ VICTORY_POINTS_4757: "Bowieville"
  VICTORY_POINTS_11975:0 "Savannah"
  VICTORY_POINTS_3732:0 "Falmouth"
  VICTORY_POINTS_3712:0 "Manchester"
- VICTORY_POINTS_10352:0 "Pensacola"
+
  VICTORY_POINTS_10803:0 "Abidjan"
  VICTORY_POINTS_12830:0 "Bangui"
  VICTORY_POINTS_3618:0 "Guryev"
@@ -4384,26 +4442,14 @@ VICTORY_POINTS_4757: "Bowieville"
 
 
 
- VICTORY_POINTS_10327:0 "Freetown"
-
- VICTORY_POINTS_12024:0 "Jefferson City"
- VICTORY_POINTS_801:0 "Silent Hill"
- VICTORY_POINTS_905:0 "Arkham"
- VICTORY_POINTS_12459:0 "Derry"
- VICTORY_POINTS_7462:0 "Castle Rock"
-
-
- VICTORY_POINTS_10198:0 "Twin Peaks"
 
 
 
- VICTORY_POINTS_10909:0 "Chattanooga"
- VICTORY_POINTS_1132:0 "Wilmington"
- VICTORY_POINTS_7527:0 "Columbia"
- VICTORY_POINTS_12384:0 "Atlanta"
- VICTORY_POINTS_913:0 "Knoxville"
- VICTORY_POINTS_9727:0 "Lexington"
- VICTORY_POINTS_7646:0 "New Edinburgh"
+
+
+
+
+
 
 
 
