dutch australia cities

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1485,9 +1485,12 @@
  VICTORY_POINTS_10475: "Fitzroy"
  VICTORY_POINTS_7566: "Townsville"
 #522 - VLAMINGVELD
- VICTORY_POINTS_8243: "Albany"
- VICTORY_POINTS_1652: "Boltsholm"
+ VICTORY_POINTS_8243: "Oranjeland"
+ VICTORY_POINTS_1652: "Westdeken"
  VICTORY_POINTS_7453: "Heldstad"
+ VICTORY_POINTS_1540: "Grensbonne"
+ VICTORY_POINTS_11011: "Brugschot"
+ VICTORY_POINTS_5175: "Fort Landwaard"
 #523 - PAPUA
  VICTORY_POINTS_7378: "Kokoda"
  VICTORY_POINTS_4329: "Port Moresby"
@@ -2187,7 +2190,6 @@
  VICTORY_POINTS_3906: "New Bedford"
  VICTORY_POINTS_3710: "Worcester"
 #814 - CONNECTICUT
- VICTORY_POINTS_9850: "Hartford"
  VICTORY_POINTS_6909: "New Haven"
  VICTORY_POINTS_9847: "Norwalk"
  VICTORY_POINTS_11830: "Providence"
@@ -2329,11 +2331,21 @@
 #882 - EMERALD COAST
 #883 - DIAMANTINA RIVER BASIN
 #884 - RODE KUST
+ VICTORY_POINTS_15489: "Diemenstad"
+ VICTORY_POINTS_15469: "Zoutermeer"
+ VICTORY_POINTS_15479: "Gennetou"
+ VICTORY_POINTS_12906: "Scheidveld"
 #885 - PELIKANMEER BASIN
+ VICTORY_POINTS_12915: "Fort Zoetren"
+ VICTORY_POINTS_15518: "Meerkerk"
 #886 - NOORDELIJKE STEENBOK
+ VICTORY_POINTS_15524: "Noordkaap"
 #887 - HARTOG DESERT
 #888 - HAAIHOEK
 #889 - ZILVERZEE
+ VICTORY_POINTS_15520: "Heerenhaven"
+ VICTORY_POINTS_15510: "Haardorp"
+ VICTORY_POINTS_5125: "Luttelgeest"
 #890 - ORANJE DESERT
 #891 - NORTHPORT
  VICTORY_POINTS_7386: "Olympia"
@@ -3655,7 +3667,6 @@
  VICTORY_POINTS_6666:0 "Geneva"
  VICTORY_POINTS_7798:0 "Dutigalle"
  VICTORY_POINTS_12406:0 "Sydney"
- VICTORY_POINTS_1652:0 "Boltsholm"
  VICTORY_POINTS_7520:0 "Montalembert"
  VICTORY_POINTS_1404:0 "Tarakan"
  VICTORY_POINTS_10475:0 "Fitzroy"
@@ -4198,7 +4209,6 @@
  VICTORY_POINTS_13229:0 "Southern Corridor Station"
  VICTORY_POINTS_4047:0 "Sirte"
  VICTORY_POINTS_9980:0 "Misratah"
- VICTORY_POINTS_8243:0 "Albany"
  VICTORY_POINTS_12715:0 "Mérida"
 
 
