all Middle East Leaders added

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -1527,6 +1527,23 @@
   TAI_ni_party:0 "Imperial Japanese Exile Influence"
   TAI_ni_party_long:0 "Imperial Japanese Exile Influence"
 
+  SAU_jc_party:0 "Sandstorm Rebels"
+  SAU_jc_party_long:0 "Sandstorm Rebels"
+  SAU_ss_party:0 "Riyadh Water Front"
+  SAU_ss_party_long:0 "Riyadh Water Front"
+  SAU_lb_party:0 "Reformer Faction"
+  SAU_lb_party_long:0 "Reformer Faction"
+  SAU_cn_party:0 "Sect of the Preachers"
+  SAU_cn_party_long:0 "Sect of the Preachers"
+  SAU_an_party:0 "International Observers"
+  SAU_an_party_long:0 "International Observers"
+  SAU_rc_party:0 "Hidden House"
+  SAU_rc_party_long:0 "The Hidden House of Saud"
+  SAU_ds_party:0 "House of Saud"
+  SAU_ds_party_long:0 "Royal House of Al Saud"
+  SAU_ni_party:0 "Ikhwan Fanatics"
+  SAU_ni_party_long:0 "Ikhwan Fanatics"
+
 
  ############
  # POLITICAL PARTY TEMPLATE 
