--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -2945,7 +2945,7 @@
  VICTORY_POINTS_15775: "Nova Lisboa"
  VICTORY_POINTS_15377: "Silva Porto"
 #1337 - SOUTH KONGO
- VICTORY_POINTS_15779: "M’banza Kongo"
+ VICTORY_POINTS_15779: "São Salvador"
  VICTORY_POINTS_8219: "Soyo"
  VICTORY_POINTS_15780: "Malanje"
 
